# mdnow

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.vi.md  install.ps1  install.sh  pyproject.toml
.claude/: .ck.json  .ckignore  settings.json
.claude/agents/: ba-writer.md  ui-designer.md
.claude/rules/: documentation-management.md
.github/workflows/: publish.yml
docs/: feature-highlight-ai-output-and-private-sites.md  project-changelog.md
mdnow/: __init__.py  artifacts.py  auth.py  cli.py  commands.py  convert.py  crawler.py  doctor.py  fetcher.py  folder.py  frontmatter.py  guards.py  inputs.py  login.py  mcp_server.py  outline.py  playwright_patch.py  quality.py  runner.py  sessions.py  slugs.py  ui.py  writer.py  youtube.py
mdnow/skill/: SKILL.md
plans/260621-0714-website-to-markdown-cli/: phase-00-camoufox-html-spike.md  phase-01-static-single-page-mvp.md  phase-02-full-site-crawl-tree.md  phase-03-camoufox-render-tier.md  phase-04-guards-polish-tests.md  phase-05-llms-txt-discovery.md  plan.md
plans/260621-1805-ai-doc-output-and-provenance/: phase-01-provenance-frontmatter.md  phase-02-artifacts-emitter.md  phase-03-tests-and-docs-sync.md  plan.md
plans/260622-0930-file-conversion-markitdown/: phase-01-convert-module-and-local-input.md  phase-02-remote-fork-and-network-gate.md  phase-03-tests-and-docs-sync.md  plan.md
plans/260625-1736-mcp-server-integration/: phase-01-add-mcp-dependency.md  phase-02-implement-mcp-server.md  phase-03-wire-mcp-flag.md  phase-04-write-tests.md  phase-05-readme-sync.md  plan.md
plans/260630-1953-crawl-spa-render-discovery/: phase-01-render-aware-discovery.md  phase-02-fetch-loop-escalation.md  phase-03-tests-and-readme-sync.md  plan.md
plans/260701-1303-distribute-mdnow-public/: phase-01-pypi-packaging.md  phase-02-license-notices.md  phase-03-bundle-skill.md  phase-04-doctor-hints.md  phase-05-install-sh.md  phase-06-docs-sync.md  plan.md
plans/260703-1000-remove-mcp-server/: phase-01-remove-mcp-code.md  phase-02-sync-docs-and-verify.md  plan.md
plans/260703-1219-ai-output-and-private-sites/: plan.md
plans/260703-1257-folder-input-conversion/: phase-01-input-detection.md  phase-02-folder-module.md  phase-03-cli-routing.md  phase-04-docs-sync.md  plan.md
tests/: conftest.py  test_artifacts.py  test_auth.py  test_cli.py  test_cli_main.py  test_convert.py  test_crawler.py  test_doctor.py  test_extractor.py  test_fetcher.py  test_folder.py  test_frontmatter_writer.py  test_guards.py  test_inputs.py  test_install_skill.py  test_linkrewrite.py  test_llmstxt.py  test_mcp_server.py  test_outline.py  test_playwright_patch.py  test_quality.py  test_self_update.py  test_sessions.py  test_tree.py  test_ui.py  test_urls.py  test_youtube.py
(+42 files in other folders)
