[project]
name = "mdnow"
version = "0.1.0"
description = "Convert any website URL to clean, AI-friendly markdown."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
render = ["camoufox>=0.4"]            # stealth browser for the --render tier
docs = ["markitdown[all]>=0.1"]       # any-file → markdown (PDF, Office, EPub, ...)

[project.scripts]
mdnow = "mdnow.cli:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mdnow"]
