[project]
name = "mdnow"
version = "0.1.0"
description = "Convert any website URL to clean, AI-friendly markdown."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Long Le", email = "longlee218@users.noreply.github.com" }]
keywords = ["markdown", "html-to-markdown", "web-scraping", "llms-txt", "cli", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/longlee218/mdnow"
Repository = "https://github.com/longlee218/mdnow"
Issues = "https://github.com/longlee218/mdnow/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "build>=1.2", "twine>=5"]
render = ["camoufox>=0.4"]            # stealth browser for the --render tier
docs = [
    # Curated markitdown extras instead of [all]: [all] hard-pins
    # youtube-transcript-api~=1.0.0 (conflicts with our >=1.2.4 below) and pulls
    # unused Azure deps. The individual extras below cover PDF/Office/audio/YouTube
    # and leave youtube-transcript-api unpinned, so our floor wins. EPub, images,
    # csv/json/xml, zip, html are handled by markitdown's base package.
    "markitdown[pdf,docx,pptx,xlsx,xls,outlook,audio-transcription,youtube-transcription]>=0.1",
    "youtube-transcript-api>=1.2.4",  # 1.0.x had broken XML fetch for YT transcripts
]

[project.scripts]
mdnow = "mdnow.cli:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mdnow"]

[tool.setuptools.package-data]
mdnow = ["skill/**/*"]
